Add link functionality, fixed improper img class in CSS

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,11 @@ body {
   background-color: rgb(140, 140, 212);
 }
 
+a:link { color:rgb(39, 57, 211); text-decoration: none !important; }
+a:visited { color:rgb(39, 57, 211);  text-decoration: none !important; }
+a:hover { color:rgb(39, 57, 211);  text-decoration: none !important; }
+a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
+
 /*HEADER CSS*/
 /*For non-mobile devices*/
 /*Appears top-right*/
@@ -73,6 +78,8 @@ body {
   }
 }
 
+
+
 /* BLOG POSTS */
 /* For standard non-mobile devices */
 @media only screen and (min-width: 600px){
@@ -100,7 +107,7 @@ body {
 }
 
 /* img formats on page */
-img {
+.minor-image {
     width:200px;
     height:auto;
     text-align: right;
@@ -136,7 +143,7 @@ img {
     margin: -20px 0px 0px 0px;
   }
   
-  img {
+  .minor-image {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -169,7 +176,7 @@ img {
       margin: -20px 0px 0px 0px;
     }
     
-    img {
+    .minor-image {
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -200,7 +207,7 @@ img {
         margin: -20px 0px 0px 0px;
       }
       
-      img {
+      .minor-image {
           width:200px;
           height:auto;
           text-align: right;
