Update full blog for new CSS page

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,9 @@ body, html {
   overflow-x:hidden;
 }
 
+html {
+  font-family: "ABeeZee";
+}
 /* Removing vertical scrollbar while preserving functionality*/
 body::-webkit-scrollbar {
   display: none;
@@ -18,6 +21,8 @@ a:link { color:rgb(39, 57, 211); text-decoration: none !important; }
 a:visited { color:rgb(39, 57, 211);  text-decoration: none !important; }
 a:hover { color:rgb(39, 57, 211);  text-decoration: none !important; }
 a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
+
+
 
 /*HEADER CSS*/
 /*For non-mobile devices*/
@@ -86,7 +91,6 @@ a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
 
 /* Container for each post */
 #blog-post {
-    font-family: "ABeeZee";
     margin: 2.5% 10% 2.5% 10%;
     background-image: linear-gradient(130deg, rgb(165, 165, 236), rgba(255, 255, 255, 0.212));
     padding: 5px 15px 30px 15px;
@@ -128,7 +132,6 @@ a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
   }
   
   #blog-post {
-      font-family: "ABeeZee";
       margin: 2.5% 10% 2.5% 10%;
       background-image: linear-gradient(130deg, rgb(165, 165, 236), rgba(255, 255, 255, 0.212));
       padding: 5px 15px 5px 15px;
@@ -162,7 +165,6 @@ a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
     }
     
     #blog-post {
-        font-family: "ABeeZee";
         margin: 2.5% 10% 2.5% 10%;
         background-image: linear-gradient(130deg, rgb(165, 165, 236), rgba(255, 255, 255, 0.212));
         padding: 5px 15px 5px 15px
@@ -192,7 +194,6 @@ a:active { color:rgb(39, 57, 211);  text-decoration: none !important; }
 
       
       #blog-post {
-          font-family: "ABeeZee";
           margin: 2.5% 10% 2.5% 10%;
           background-image: linear-gradient(130deg, rgb(165, 165, 236), rgba(255, 255, 255, 0.212));
           padding: 5px 15px 50px 15px;
